
[gd_scene load_steps=2 format=3 uid="uid://dxg3h2vjkeah0"]

[ext_resource type="Script" uid="uid://cay8x3uyxhhi8" path="res://control.gd" id="1_8hh42"]
[gd_scene load_steps=4 format=3 uid="uid://dxg3h2vjkeah0"]

[ext_resource type="Script" uid="uid://bjhv7c62ux2kc" path="res://control.gd" id="1_8hh42"]

[sub_resource type="Theme" id="Theme_togc3"]

[sub_resource type="Theme" id="Theme_8hh42"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8hh42")

[node name="GameTitle" type="Label" parent="Control"]
layout_mode = 0
offset_left = 311.0
offset_top = 52.0
offset_right = 849.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 50
text = "untitled survival game"

[node name="StartButton" type="Button" parent="Control"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 408.0
offset_top = 184.0
offset_right = 752.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 100
text = "START"

[node name="QuitButton" type="Button" parent="Control"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 956.0
offset_top = 528.0
offset_right = 1100.0
offset_bottom = 605.0
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="TutorialButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 304.0
offset_top = 377.0
offset_right = 848.0
offset_bottom = 522.0
theme_override_font_sizes/font_size = 100
text = "TUTORIAL"

[node name="TutorialScreen" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 152.0
offset_top = 48.0
offset_right = 952.0
offset_bottom = 504.0

[node name="Label" type="Label" parent="Control/TutorialScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 776.0
offset_bottom = 433.0
text = "How to Play:
1. Press START
2. Survive the robots
3. Use the buttons as powerups but sacrifices certain things.
4. Don't let your battery die
5. Contact help (100% Signal) to win!

Signal Boost: Boosts signal speed but reduces health
Health Boost: Boosts health but slows signal
Emergency Overcharge: Boosts battery to 100% but max capacity is now 75%

Keybinds:
/ | Melee Attack
SHIFT | Shoot
WASD | Movement"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Control/TutorialScreen"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.54
anchor_top = 0.21100001
anchor_right = 0.54
anchor_bottom = 0.21100001
offset_left = 279.99997
offset_top = -80.216
offset_right = 353.99997
offset_bottom = -4.2160034
theme_override_font_sizes/font_size = 49
text = "x"

offset_bottom = 329.0
theme = SubResource("Theme_togc3")
theme_override_font_sizes/font_size = 100
text = "START"

[node name="TutorialButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 336.0
offset_top = 344.0
offset_right = 825.0
offset_bottom = 489.0
theme_override_font_sizes/font_size = 100
text = "TUTORIAL"

[node name="ExitButton" type="Button" parent="Control/TutorialButton"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="QuitButton" type="Button" parent="Control"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 976.0
offset_top = 547.0
offset_right = 1128.0
offset_bottom = 624.0
theme = SubResource("Theme_8hh42")
theme_override_font_sizes/font_size = 50
text = "QUIT"
